--- a/src/design-system/components/Tabs/_tabs.scss
+++ b/src/design-system/components/Tabs/_tabs.scss
@@ -133,7 +133,7 @@
             display: inline-flex;
             flex-direction: column;
             align-items: stretch;
-            width: fit-content;
+            width: 186px;
             max-width: 100%;
             overflow-y: auto;
             overflow-x: hidden;
@@ -141,8 +141,8 @@
 
         &--vertical &__list {
             flex-direction: column;
-            width: auto;
-            min-width: 186px;
+            width: 100%;
+            min-width: 0;
             align-items: stretch;
         }
 
@@ -156,6 +156,9 @@
         &--vertical .uds-tabs-item__label {
             flex: 1;
             min-width: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         &--vertical.uds-tabs--underline {
@@ -194,7 +197,8 @@
 
         &--vertical.uds-tabs--block .uds-tabs-item,
         &--vertical.uds-tabs--block-inverted .uds-tabs-item {
-            padding: var(--uds-spacing-8) var(--uds-spacing-12);
+            padding: var(--uds-spacing-4) var(--uds-spacing-12);
+            border: solid var(--uds-border-width-1) var(--uds-border-transparent);
             @include uds-body-14-medium;
             line-height: var(--uds-line-28);
         }
